--- a/frontend-ems/src/index.html
+++ b/frontend-ems/src/index.html
@@ -12,4 +12,6 @@
 <body>
   <app-root></app-root>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </html>
